crates/tsuno-driver/tests/fixtures/snapshots/pass/allows_req_only_function_contract.rs
fn req_only_contract(x: i32)
//@ req {x} == 1i32
{
    //@ assert {x} == 1i32;
}

fn main() {
    req_only_contract(1);
}
