crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_explicit_result_binder_in_ens.rs
fn id(x: i32) -> i32
//@ req true
//@ ens ?result == {x}
{
    x
}

fn main() {
    let _ = id(1);
}
